Add leak logging for node info managers that can be added to leak-gauge.  b=414704  r+sr=sicking  a=schrep